Adds in the form and the views and the scss

--- a/odonto/templates/partials/fp17_o_summary.html
+++ b/odonto/templates/partials/fp17_o_summary.html
@@ -2,6 +2,7 @@
 {% load odonto_subrecords %}
 
 {% subrecord_row models.Fp17DentalCareProvider pathway=pathway %}
+{% subrecord_row models.PretreatmentCovidTriageAssessments pathway=pathway %}
 {% subrecord_row models.Fp17Exemptions pathway=pathway %}
 {% subrecord_row models.OrthodonticDataSet pathway=pathway %}
 {% subrecord_row models.ExtractionChart pathway=pathway %}
