--- a/odonto/templates/partials/fp17_summary.html
+++ b/odonto/templates/partials/fp17_summary.html
@@ -1,7 +1,7 @@
 {% load links %}
 {% load odonto_subrecords %}
-
 {% subrecord_row models.Fp17DentalCareProvider pathway=pathway %}
+{% subrecord_row models.PretreatmentCovidTriageAssessments pathway=pathway %}
 {% subrecord_row models.Fp17IncompleteTreatment pathway=pathway %}
 {% subrecord_row models.Fp17Exemptions pathway=pathway %}
 {% subrecord_row models.Fp17ClinicalDataSet pathway=pathway %}
