--- a/odonto/templates/view_fp17.html
+++ b/odonto/templates/view_fp17.html
@@ -8,6 +8,7 @@
       <h1>{{ demographics.name }} - FP17</h1>
 
       {% subrecord_row models.Fp17DentalCareProvider %}
+      {% subrecord_row models.PretreatmentCovidTriageAssessments %}
       {% subrecord_row models.Fp17IncompleteTreatment %}
       {% subrecord_row models.Fp17Exemptions %}
       {% subrecord_row models.Fp17ClinicalDataSet %}
