--- a/odonto/templates/forms/case_mix_form.html
+++ b/odonto/templates/forms/case_mix_form.html
@@ -1,7 +1,7 @@
 {% load odonto_forms %}
 <div class="row">
     <div class="col-md-4">
-      {% btn_radio field="CaseMix.ability_to_communicate" requierd=True %}
+      {% btn_radio field="CaseMix.ability_to_communicate" required=True %}
       {% btn_radio field="CaseMix.oral_risk_factors" required=True %}
     </div>
     <div class="col-md-4">
