--- a/odonto/templates/forms/fp17_clinical_data_set_form.html
+++ b/odonto/templates/forms/fp17_clinical_data_set_form.html
@@ -68,7 +68,7 @@
     {% teeth field="Fp17ClinicalDataSet.inlays" %}
   </div>
   <div class="col-md-3 col-md-offset-1">
-    {% charfield label="Referral for Advanced Mandatory Services (AMS)" field="Fp17ClinicalDataSet.referral_for_advanced_mandatory_services_band" unit="band" %}
+    {% number label="Referral for Advanced Mandatory Services (AMS)" field="Fp17ClinicalDataSet.referral_for_advanced_mandatory_services_band" unit="band" min="1" max="3" %}
   </div>
   <div class="col-md-3 col-md-offset-1">
     {% teeth field="Fp17ClinicalDataSet.permanent_fillings_and_sealant_restorations" %}
