fixes a bug where the checkbox cross would move on hover

--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -275,6 +275,10 @@ h5{
     border-radius: 2px;
 }
 
+.btn-checkbox.btn-lg:hover{
+    padding: 8px 0;
+}
+
 .btn-default small{
   color: #DDD;
 }
