opal no longer accepts a number but accepts an item. By using patient rather than episode we will always update the patient demographics as appear on the top of the page.

--- a/odonto/templates/detail/dental_care.html
+++ b/odonto/templates/detail/dental_care.html
@@ -25,7 +25,7 @@
           </p>
         </div>
         <div class="col-md-1 col-md-offset-4">
-          <a ng-click="episode.recordEditor.editItem('demographics', 0)">
+          <a ng-click="episode.recordEditor.editItem('demographics', patient.demographics[0])">
             <i class="fa fa-pencil edit pull-right pointer"></i>
           </a>
         </div>
