Fix up the display so that all display summaries look the same and add a special template tag for covid status

--- a/odonto/templates/records/case_mix.html
+++ b/odonto/templates/records/case_mix.html
@@ -14,11 +14,11 @@
       </tr>
       <tr>
         <td>Maximum Score</td>
-        <td>[[ caseMixHelper.maxCode(item) ]]</td>
+        <td class="subrecord-row-value">[[ caseMixHelper.maxCode(item) ]]</td>
       </tr>
       <tr>
         <td>Banded Total Score</td>
-        <td>[[ caseMixHelper.band(item) ]] ([[ caseMixHelper.totalScore(item) ]])</td>
+        <td class="subrecord-row-value">[[ caseMixHelper.band(item) ]] ([[ caseMixHelper.totalScore(item) ]])</td>
       </tr>
     </table>
   </div>
