--- a/odonto/templates/records/fp17_exemptions.html
+++ b/odonto/templates/records/fp17_exemptions.html
@@ -8,7 +8,7 @@
         <td>
           Commissioner approval
         </td>
-        <td>
+        <td class="subrecord-row-value">
           <span ng-show="item.commissioner_approval">
             X
           </span>
