--- a/odonto/templates/templatetags/table_row_field_display.html
+++ b/odonto/templates/templatetags/table_row_field_display.html
@@ -2,7 +2,7 @@
   <td>
     {{ display_name }}
   </td>
-  <td>
+  <td class="subrecord-row-value">
     <span ng-show="{{ model }}">
     {% if is_boolean %}
       X
