--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -654,3 +654,8 @@ table.patient-list {
         font-weight: normal;
     }
 }
+
+.table > tbody > tr > td.subrecord-row-value{
+    width: 40%;
+    padding-left: 8%;
+}
