Adds in a the covid pathways and the links to the covid pathways from the patient detail page (which is the episode category page called dental care for the purposes of odonto). This works in that it will let a patient create a new one, edit and submit exactly as they would have an F17, FP17O, but it lacks all polish, which will come in future commits

--- a/odonto/templates/detail/dental_care.html
+++ b/odonto/templates/detail/dental_care.html
@@ -32,8 +32,6 @@
       </div>
     </div>
 
-
-
     <div class="row content-offset">
       <a ng-class="{disabled: dentalCare.hasOpenFp17}" class="btn btn-primary btn-lg pull-right open-claim-button"
         href="{% link_url pathways.Fp17Pathway ngpatient='patient.id' ngepisode='dentalCare.newFp17.id' %}">
@@ -42,6 +40,10 @@
       <a ng-class="{disabled: dentalCare.hasOpenFp17o}" class="btn btn-primary btn-lg pull-right open-claim-button"
         href="{% link_url pathways.Fp17OPathway ngpatient='patient.id' ngepisode='dentalCare.newFp17o.id' %}">
         Open FP17O
+      </a>
+      <a ng-class="{disabled: dentalCare.hasCovidTriage}" class="btn btn-primary btn-lg pull-right open-claim-button"
+        href="{% link_url pathways.CovidTriagePathway ngpatient='patient.id' ngepisode='dentalCare.newCovidTriage.id' %}">
+        Open covid triage
       </a>
     </div>
 
@@ -79,6 +81,11 @@
                     Edit &nbsp;
                   </a>
                 </span>
+                <span ng-show="episode.category_name === 'COVID_TRIAGE'">
+                  <a class="btn btn-small btn-primary" href="{% link_url pathways.EditCovidTriagePathway ngpatient='patient.id' ngepisode='episode.id' %}">
+                    Edit &nbsp;
+                  </a>
+                </span>
               </span>
             </td>
             <td>
@@ -89,6 +96,9 @@
                 </span>
                 <span ng-show="episode.category_name === 'FP17O'">
                   {% button_to 'Submit' pathways.SubmitFP17OPathway ngpatient="patient.id" ngepisode="episode.id" classes="btn-small btn-primary" %}
+                </span>
+                <span ng-show="episode.category_name === 'COVID_TRIAGE'">
+                  {% button_to 'Submit' pathways.SubmitCovidTriagePathway ngpatient="patient.id" ngepisode="episode.id" classes="btn-small btn-primary" %}
                 </span>
               </span>
               {% endif %}
