Changes the user options to 'Now'

--- a/odonto/templates/_helpers/timefield.html
+++ b/odonto/templates/_helpers/timefield.html
@@ -35,8 +35,7 @@ class="col-sm-8"
           />
 {% if user_options %}
     <span class="input-group-btn">
-      <button type="button" class="btn btn-default" ng-click="{{ model }} = dateHelper.now()" href="">Today</a>
-      <button type="button" class="btn btn-default" ng-click="{{ model }} = dateHelper.yesterday()" href="">Yesterday</a>
+      <button type="button" class="btn btn-default" ng-click="{{ model }} = dateHelper.now()" href="">Now</a>
     </span>
   </div>
 {% endif %}
