--- a/odonto/templates/open_list.html
+++ b/odonto/templates/open_list.html
@@ -28,14 +28,7 @@
           </td>
 
           <td>
-            <a
-              {% if episode.category_name == "FP17" %}
-                href="/pathway/#/fp17-edit/{{ episode.patient.pk }}/{{ episode.pk }}"
-              {% endif %}
-              {% if episode.category_name == "FP17O" %}
-                href="/pathway/#/fp17-o-edit/{{ episode.patient.pk }}/{{ episode.pk }}"
-              {% endif %}
-              class="btn btn-small btn-primary">
+            <a href="{{ episode.category.get_edit_link }}" class="btn btn-small btn-primary">
               Edit &nbsp;
             </a>
           </td>
