--- a/odonto/templates/unsubmitted_list.html
+++ b/odonto/templates/unsubmitted_list.html
@@ -32,26 +32,12 @@
             </a>
           </td>
           <td>
-            <a
-              {% if episode.category_name == "FP17" %}
-                href="/pathway/#/fp17-edit/{{ episode.patient.pk }}/{{ episode.pk }}"
-              {% endif %}
-              {% if episode.category_name == "FP17O" %}
-                href="/pathway/#/fp17-o-edit/{{ episode.patient.pk }}/{{ episode.pk }}"
-              {% endif %}
-              class="btn btn-small btn-primary">
+            <a href="{{ episode.category.get_edit_link }}" class="btn btn-small btn-primary">
               Edit &nbsp;
             </a>
           </td>
           <td>
-            <a
-              {% if episode.category_name == "FP17" %}
-                href="/pathway/#/fp17-submit/{{ episode.patient.pk }}/{{ episode.pk }}"
-              {% endif %}
-              {% if episode.category_name == "FP17O" %}
-                href="/pathway/#/fp17-o-submit/{{ episode.patient.pk }}/{{ episode.pk }}"
-              {% endif %}
-              class="btn btn-small btn-primary">
+            <a href="{{ episode.category.get_submit_link }}" class="btn btn-small btn-primary">
               Submit
             </a>
           </td>
