--- a/odonto/templates/open_list.html
+++ b/odonto/templates/open_list.html
@@ -25,6 +25,9 @@
             {% if episode.category_name == "FP17O" %}
               {{ episode.orthodontictreatment_set.get.date_of_completion }}
             {% endif %}
+            {% if episode.category_name == "COVID-19 triage" %}
+              {{ episode.covidtriage_set.get.date_of_contact }}
+            {% endif %}
           </td>
 
           <td>
