--- a/odonto/templates/unsubmitted_list.html
+++ b/odonto/templates/unsubmitted_list.html
@@ -25,6 +25,9 @@
             {% if episode.category_name == "FP17O" %}
               {{ episode.orthodontictreatment_set.get.date_of_completion }}
             {% endif %}
+            {% if episode.category_name == "COVID-19 triage" %}
+              {{ episode.covidtriage_set.get.date_of_contact }}
+            {% endif %}
           </td>
           <td>
             <a class="btn btn-small btn-default" href="{{ episode.patient.get_absolute_url }}">
