--- a/odonto/templates/templatetags/table_row_field_display.html
+++ b/odonto/templates/templatetags/table_row_field_display.html
@@ -8,6 +8,10 @@
       X
     {% elif is_date %}
       [[ {{ model }} | displayDate ]]
+    {% elif is_time %}
+      <span ng-if="{{ model }}">
+        [[ {{ model }}.substring(0, 5) ]]
+      </span>
     {% else %}
       [[ {{ model }} ]]
     {% endif %}
