--- a/odonto/templates/detail/dental_care.html
+++ b/odonto/templates/detail/dental_care.html
@@ -41,7 +41,7 @@
         href="{% link_url pathways.Fp17OPathway ngpatient='patient.id' ngepisode='dentalCare.newFp17o.id' %}">
         Open FP17O
       </a>
-      {% if odonto_roles.can_see_covid_triage %}
+      {% if roles.can_see_covid_triage %}
       <a ng-class="{disabled: dentalCare.hasCovidTriage}" class="btn btn-primary btn-lg pull-right open-claim-button"
         href="{% link_url pathways.CovidTriagePathway ngpatient='patient.id' ngepisode='dentalCare.newCovidTriage.id' %}">
         Open COVID-19 triage
@@ -52,7 +52,8 @@
     <div class="row content-offset-20">
       <div class="col-md-12">
         <table class="table table-striped">
-          <tr ng-repeat="episode in dentalCare.openAndSubmittedEpisodes | orderBy:'-id'">
+
+          <tr ng-show="showCovidTriage(episode, {% if roles.can_see_covid_triage %}1{% else %}0{% endif %})" ng-repeat="episode in dentalCare.openAndSubmittedEpisodes | orderBy:'-id'">
             <td>
               [[ episode.category_name ]]
             </td>
