Fixes up the datetime field display so it looks nice

--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -863,4 +863,13 @@ table.patient-list {
   width: 40%;
   padding-left: 8%;
 }
+
+.datetime-picker .time-picker {
+  padding-left: 20px;
+  padding-top: 6px;
+}
+
+.datetime-picker .btn.btn-default {
+  margin-left: 4px;
+}
 /*# sourceMappingURL=odonto.css.map */
