--- a/odonto/templates/_helpers/odonto_datetime_picker.html
+++ b/odonto/templates/_helpers/odonto_datetime_picker.html
@@ -1,7 +1,7 @@
 {% load odonto_forms %}
 <div class="row datetime-picker">
   <div class="col-md-4">
-    {% odonto_datepicker label=date_label change=change field=field data=date_picker_args style=style %}
+    {% odonto_datepicker label=label change=change field=field data=date_picker_args style=style %}
   </div>
   <div class="col-md-4 time-picker">
     <div class="form-group"
