Adds in the menu item if the user is a super user or a dental administrator

--- a/odontotheme/templates/opal.html
+++ b/odontotheme/templates/opal.html
@@ -32,9 +32,14 @@
                 </a>
               </li>
             {% endif %}
+            {% if roles.dental_administrator %}
+            <li {% if request.resolver_match.url_name == "odonto-all-unsubmitted" %}class="active"{% endif %}>
+              <a href="{% url 'odonto-all-unsubmitted' %}">
+                All unsubmitted <span class="badge">{{ episode_counts.all_unsubmitted }}</span>
+              </a>
+            </li>
+            {% endif %}
           </ul>
-
-
           <div id="logout">
             <ul class="app-info">
               {% if request.user.profile.can_extract %}
