Moves the totals on the unsubmitted list to the top of the table, Moves the title to the top of the page

--- a/odonto/templates/all_unsubmitted_list.html
+++ b/odonto/templates/all_unsubmitted_list.html
@@ -2,7 +2,7 @@
 
 {% block odonto_viewport %}
   <div class="content-offset">
-    <h2>Unsubmitted by user</h2>
+    <h2>All unsubmitted FP17s and FP17Os</h2>
     <table class="table table-striped">
       <thead>
         <tr>
@@ -49,10 +49,28 @@
       </tbody>
     </table>
 
-
-
-    <h2>All unsubmitted FP17s and FP17Os</h2>
-    <table class="table table-striped">
+    <table class="table table-striped content-offset">
+      <thead>
+        <tr>
+          <th>
+            Name
+          </th>
+          <th>
+            Claim type
+          </th>
+          <th>
+            Band
+          </th>
+          <th>
+            Performer
+          </th>
+          <th>
+            Date
+          </th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
       {% for episode in unsubmitted %}
         <tr>
           <td>
@@ -88,8 +106,8 @@
             </a>
           </td>
         </tr>
-
-{% endfor %}
+      </tbody>
+      {% endfor %}
     </table>
   </div>
 {% endblock %}
