Change 'Claim type' to 'Type' in the all unsubmitted list so that it works better on smaller screen sizes

--- a/odonto/templates/all_unsubmitted_list.html
+++ b/odonto/templates/all_unsubmitted_list.html
@@ -56,7 +56,7 @@
             Name
           </th>
           <th>
-            Claim type
+            Type
           </th>
           <th>
             Band
