--- a/odontotheme/templates/opal.html
+++ b/odontotheme/templates/opal.html
@@ -35,7 +35,7 @@
             {% if roles.dental_administrator or request.user.is_superuser %}
             <li {% if request.resolver_match.url_name == "odonto-all-unsubmitted" %}class="active"{% endif %}>
               <a href="{% url 'odonto-all-unsubmitted' %}">
-                All unsubmitted <span class="badge">{{ episode_counts.all_unsubmitted }}</span>
+                All unsubmitted <span class="badge hidden-md hidden-lg">{{ episode_counts.all_unsubmitted }}</span>
               </a>
             </li>
             {% endif %}
