--- a/odonto/templates/patient_charges.html
+++ b/odonto/templates/patient_charges.html
@@ -3,5 +3,38 @@
 {% block odonto_viewport %}
 <div class="content-offset">
 <h1>{{ view.kwargs.month }} {{ view.kwargs.year }}</h1>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Type</th>
+      <th>Clinic</th>
+      <th>Charge</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for row in object_list %}
+    <tr>
+      <td>
+        {{ row.patient.demographics.0.name }}
+        {% if row.patient.demographics_set.0.date_of_birth %}
+          ({{ row.patient.demographics_set.0.date_of_birth }})
+        {% endif %}
+      </td>
+      <td>
+        {{ row.category_name }}
+      </td>
+      <td>
+        {{ row.fp17dentalcareprovider_set.0.provider_location_number }}
+      </td>
+      <td>
+        {{ row.fp17exemptions_set.0.patient_charge_collected }}
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
+
+
+</table>
 </div>
 {% endblock %}
