--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -683,3 +683,13 @@ table.patient-list {
         margin-left: 4px;
     }
 }
+
+
+.view-switcher{
+    .btn-group{
+        .btn{
+            padding: 10px 20px;
+            margin-top: 4px;
+        }
+    }
+}
