--- a/odonto/templates/patient_charges.html
+++ b/odonto/templates/patient_charges.html
@@ -48,10 +48,12 @@
     {% for row in object_list %}
     <tr>
       <td>
+        <a href='{{ row.get_summary_link }}'>
         {{ row.patient.demographics_set.all.0.name }}
         {% if row.patient.demographics_set.all.0.date_of_birth %}
           ({{ row.patient.demographics_set.all.0.date_of_birth }})
         {% endif %}
+        </a>
       </td>
       <td>
         {{ row.category_name }}
