--- a/odonto/templates/patient_charges.html
+++ b/odonto/templates/patient_charges.html
@@ -40,15 +40,17 @@
     <tr>
       <th>Name</th>
       <th>Type</th>
+      <th>Completed</th>
       <th>Clinic</th>
       <th>Charge</th>
+      <th>Submitted</th>
     </tr>
   </thead>
   <tbody>
     {% for row in object_list %}
     <tr>
       <td>
-        <a href='{{ row.get_summary_link }}'>
+        <a href='{{ row.category.get_summary_link }}'>
         {{ row.patient.demographics_set.all.0.name }}
         {% if row.patient.demographics_set.all.0.date_of_birth %}
           ({{ row.patient.demographics_set.all.0.date_of_birth }})
@@ -59,10 +61,24 @@
         {{ row.category_name }}
       </td>
       <td>
+        {{ row.category.get_sign_off_date }}
+      </td>
+      <td>
         {{ row.fp17dentalcareprovider_set.all.0.provider_location_number }}
       </td>
       <td>
         {{ row.fp17exemptions_set.all.0.patient_charge_collected }}
+      </td>
+      <td>
+        {% if row.category.submission %}
+          {% if row.category.submission == row.category.SUCCESS or row.category.submission == row.category.MANUALLY_PROCESSED %}
+            <i class="fa fa-check"></i>
+          {% else %}
+          <i class="fa fa-times"></i>
+          {% endif %}
+        {% else %}
+          <i class="fa fa-times"></i>
+        {% endif %}
       </td>
     </tr>
     {% endfor %}
