--- a/odonto/templates/patient_charges.html
+++ b/odonto/templates/patient_charges.html
@@ -6,7 +6,7 @@
 <div class="content-offset">
 <div class="row">
   <div class="col-md-6">
-    <h1>Patient charges for {{ view.get_date_range.0 | date:'F' }} {{ view.kwargs.year }}</h1>
+    <h1>Patient charges for {{ view.get_date_range.0 | date:'F' }} {{ view.kwargs.year }} (£{{ total }})</h1>
   </div>
   <div class="col-md-6 text-right view-switcher">
     <div class="btn-group">
@@ -67,7 +67,7 @@
         {{ row.fp17dentalcareprovider_set.all.0.provider_location_number }}
       </td>
       <td>
-        {{ row.fp17exemptions_set.all.0.patient_charge_collected }}
+        £{{ row.fp17exemptions_set.all.0.patient_charge_collected }}
       </td>
       <td>
         {% if row.category.submission %}
