Adds in the ndew clinical data set changes

--- a/odonto/templates/forms/fp17_clinical_data_set_form.html
+++ b/odonto/templates/forms/fp17_clinical_data_set_form.html
@@ -95,3 +95,15 @@
     {% teeth field="Fp17ClinicalDataSet.missing_teeth_deciduous" max="12" %}
   </div>
 </div>
+
+<div class="row content-offset-20">
+  <div class="col-md-3">
+    {% btn_radio field="Fp17ClinicalDataSet.custom_made_occlusal_appliance" %}
+  </div>
+  <div class="col-md-3 col-md-offset-1">
+    {% btn_checkbox field="Fp17ClinicalDataSet.denture_additions_reline_rebase" %}
+  </div>
+  <div class="col-md-3 col-md-offset-1">
+    {% btn_checkbox field="Fp17ClinicalDataSet.phased_treatment" %}
+  </div>
+</div>
