--- a/odonto/templates/records/fp17_clinical_data_set.html
+++ b/odonto/templates/records/fp17_clinical_data_set.html
@@ -218,6 +218,30 @@
           [[ item.filled_teeth_deciduous ]]
         </td>
       </tr>
+      <tr>
+        <td>
+          Custom made occlusal appliance
+        </td>
+        <td>
+          [[ item.custom_made_occlusal_appliance ]]
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Denture Additions/Reline/Rebase
+        </td>
+        <td>
+          <span ng-show="item.denture_additions_reline_rebase">X</span>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Phased treatment
+        </td>
+        <td>
+          <span ng-show="item.phased_treatment">X</span>
+        </td>
+      </tr>
     </table>
   </div>
 </div>
