Remove 'And Sealant Restorations' from the description of the permanent fillings field

--- a/odonto/templates/records/fp17_clinical_data_set.html
+++ b/odonto/templates/records/fp17_clinical_data_set.html
@@ -44,10 +44,10 @@
       </tr>
       <tr>
         <td>
-          Permanent fillings and sealant restorations
+          Permanent fillings
         </td>
         <td>
-          [[ item.permanent_fillings_and_sealant_restorations ]]
+          [[ item.permanent_fillings ]]
         </td>
       </tr>
       <tr>
