Adds the remaining additional clinical info, ie Pre-Formed Crowns and Advanced perio root surface debridement

--- a/odonto/templates/records/fp17_clinical_data_set.html
+++ b/odonto/templates/records/fp17_clinical_data_set.html
@@ -52,6 +52,14 @@
       </tr>
       <tr>
         <td>
+          Pre-Formed Crowns
+        </td>
+        <td>
+          [[ item.pre_formed_crowns ]]
+        </td>
+      </tr>
+      <tr>
+        <td>
           Extractions
         </td>
         <td>
@@ -128,6 +136,14 @@
         </td>
         <td>
           [[ item.referral_for_advanced_mandatory_services_band ]]
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Advanced perio root surface debridement
+        </td>
+        <td>
+          [[ item.advanced_perio_root_surface_debridement ]]
         </td>
       </tr>
       <tr>
