--- a/odonto/templates/forms/fp17_clinical_data_set_form.html
+++ b/odonto/templates/forms/fp17_clinical_data_set_form.html
@@ -76,7 +76,7 @@
 </div>
 <div class="row content-offset-20">
   <div class="col-md-3">
-    {% number field="Fp17ClinicalDataSet.advanced_perio_root_surface_debridement" min="1" max="6" %}
+    {% number field="Fp17ClinicalDataSet.advanced_perio_root_surface_debridement" min="1" max="6" unit="sextant" %}
   </div>
   <div class="col-md-3 col-md-offset-1">
     {% number label="Referral for Advanced Mandatory Services (AMS)" field="Fp17ClinicalDataSet.referral_for_advanced_mandatory_services_band" unit="band" min="1" max="3" %}
