--- a/odonto/templates/records/fp17_commissioning.html
+++ b/odonto/templates/records/fp17_commissioning.html
@@ -1,4 +1,4 @@
-<span ng-show="item.flexible_commissioning_flag">
-    [[ item.flexible_commissioning_flag ]]
+<span ng-show="item.flexible_commissioning">
+    [[ item.flexible_commissioning ]]
    <br />
 </span>
