--- a/odonto/templates/forms/demographics_form.html
+++ b/odonto/templates/forms/demographics_form.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
   <div class="col-md-5">
-    {% charfield field="Demographics.nhs_number" label="NHS number" minlength="10" maxlength="10" pattern="/^[0-9]*$/" pattern_error="Numbers only" style="vertical" required=True %}
+    {% charfield field="Demographics.nhs_number" label="NHS number" style="vertical" %}
   </div>
 </div>
 <div class="row">
